--- a/SportsStore/SportsStore.UnitTests/SportsStore.UnitTests.csproj
+++ b/SportsStore/SportsStore.UnitTests/SportsStore.UnitTests.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTest1.cs" />
+    <Compile Include="CartTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SportsStore.Domain\SportsStore.Domain.csproj">
