--- a/SportsStore/SportsStore.WebUI/Web.config
+++ b/SportsStore/SportsStore.WebUI/Web.config
@@ -20,6 +20,8 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <!-- добавляем Email.WriteAsFile для управлением отправки почты -->
+    <add key="Email.WriteAsFile" value="true"/>
   </appSettings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
