--- a/SportsStore/SportsStore.WebUI/Web.config
+++ b/SportsStore/SportsStore.WebUI/Web.config
@@ -27,7 +27,13 @@
     <httpRuntime targetFramework="4.5" />
     <compilation debug="true" targetFramework="4.5" />
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" timeout="2880" />
+      <!--<forms loginUrl="~/Account/Login" timeout="2880" />--> 
+       <!-- настройка аутентификации -->
+      <forms loginUrl="~/Account/Login" timeout="2880">
+        <credentials passwordFormat="Clear">
+          <user name="admin" password="123qwe"/>
+        </credentials>
+      </forms>
     </authentication>
     <pages>
       <namespaces>
