--- a/SportsStore/SportsStore.WebUI/Web.config
+++ b/SportsStore/SportsStore.WebUI/Web.config
@@ -72,6 +72,8 @@
         <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
       </providers>
     </sessionState>
+    <!-- секция глобализации (устраняет проблему с '.' и ','-->
+    <globalization uiCulture="en" culture="en-US" />
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
